force-app/main/default/objects/Quote_Request__c/Quote_Request__c.object-meta.xml
<CustomObject>
    <description>Sample custom object for demonstrating BehaviorIQ plugin architecture. Tracks quote requests from customers.</description>
    <label>Quote Request</label>
    <nameField>
        <displayFormat>QR-{0000}</displayFormat>
        <label>Quote Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>