force-app/main/default/objects/Quote_Request__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Date when this quote request expires</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>